--- a/src/pages/en/analytics.astro
+++ b/src/pages/en/analytics.astro
@@ -1,8 +1,8 @@
 ---
 import LayoutEn from '../../layouts/LayoutEn.astro';
-import { AnalyticsDashboard } from '../../components/AnalyticsDashboard.tsx';
+import Analytics from '../../components/Analytics.tsx';
 ---
 
 <LayoutEn title="Analytics - DomMate">
-  <AnalyticsDashboard client:load language="en" />
+  <Analytics client:load language="en" />
 </LayoutEn> 
