--- a/src/pages/en/email.astro
+++ b/src/pages/en/email.astro
@@ -1,6 +1,6 @@
 ---
 import LayoutEn from '../../layouts/LayoutEn.astro';
-import { EmailDashboard } from '../../components/EmailDashboard.tsx';
+import EmailConfigForm from '../../components/EmailConfigForm.tsx';
 ---
 
 <LayoutEn title="Email Notification System - DomMate">
