--- a/src/pages/analytics.astro
+++ b/src/pages/analytics.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import { AnalyticsDashboard } from '../components/AnalyticsDashboard.tsx';
+import Analytics from '../components/Analytics.tsx';
 ---
 
 <Layout title="数据分析 - DomMate">
-  <AnalyticsDashboard client:load language="zh" />
+  <Analytics client:load language="zh" />
 </Layout> 
