--- a/src/pages/en/groups.astro
+++ b/src/pages/en/groups.astro
@@ -1,6 +1,6 @@
 ---
 import LayoutEn from '../../layouts/LayoutEn.astro';
-import GroupManagement from '../../components/GroupManagement.tsx';
+import { GroupManagement } from '../../components/GroupManagement.tsx';
 import { ThemeToggle } from '../../components/ThemeToggle.tsx';
 ---
 
