--- a/src/pages/en/analytics.astro
+++ b/src/pages/en/analytics.astro
@@ -1,8 +1,8 @@
 ---
 import LayoutEn from '../../layouts/LayoutEn.astro';
-import Analytics from '../../components/Analytics.tsx';
+import AnalyticsComponent from '../../components/Analytics.tsx';
 ---
 
 <LayoutEn title="Analytics - DomMate">
-  <Analytics client:load language="en" />
+  <AnalyticsComponent client:load language="en" />
 </LayoutEn> 
